1)Mobile works 2) desktop not stretching items vertically and  -- FIX !

--- a/public/style/desktop.css
+++ b/public/style/desktop.css
@@ -1,8 +1,9 @@
 @media screen and (min-width: 768px) {
 
     .col1 {
-        width : 15%;
+        width : 15%;        
         background: red;
+        display: inline-block;
     }
 
     .col2 {
@@ -34,31 +35,43 @@
         width : 23%;       
         background: plum;
     }
+  
+    .grid-header {
+        width : 100%;
+                display: flex;                  
+        background : #485e74;    
+        color: #fff;
+        font-size: 18px;       
+        justify-items: stretch;
+    }
+    
+    .grid-header > div{        
+        display: inline-flex;
+        align-items: center;   
+        justify-content: center;        
+        border: 1px solid black;            
+    }
 
-    .broker > .inline-header{
+    .names{
         display: none;
     }
 
-    .grid-header {
-        display: flex;            
-        width : 100%;
-        background : #485e74;    
-        color: #fff;
-        font-size: 18px;               
-    }
-    
-    .grid-header > div{
-        display: inline-flex;
-        align-items: center;    
-        justify-content: center;          
-        border: 1px solid black;    
-    }
-    
-    .broker{   
-        flex-direction: row;
+    .broker_header{
+        display: none;
     }
 
-    .broker > div{
-        display: inline-flex;                           
+    .values{
+        width : 100%;
+        display: flex;     
+        flex-direction: row;
+        align-items: stretch;
+        aligitems: stretch;
+        justify-content: center;
     }
+
+    .values > div{
+        display: flex;               
+        justify-content: center;        
+    }
+
 }
