--- a/public/style/mobile-default.css
+++ b/public/style/mobile-default.css
@@ -26,13 +26,6 @@ body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-
-
-.inline-header{
-    width: 50%;
-    display: inline-block;
-}
-
 .header{
     text-align: center;
 }
@@ -50,17 +43,47 @@ body{
 }
 
 .broker{   
-    display: flex;
-    flex-direction: column;
+    display: flex;    
+    background: green;
     width : 100%;       
+    flex-direction: column;
 }
 
-.broker > div{
+.broker_header{
+    width : 100%;
+    height : 100%;
     display: flex;
-    align-items: center;    
-    justify-content: center;          
+    background: red;
+}
+
+.broker_body{
+    width : 100%;
+    height : 100%;
+    display: flex;
+}
+
+.names{
+    width : 50%;
+    display: inline-flex;
+    flex-direction: column;
+}
+
+.names > div{        
     border: 1px solid black;                            
 }
+
+
+.values{
+    width : 50%;
+    display: inline-flex;     
+    flex-direction: column;
+}
+
+.values > div{
+    border: 1px solid black;                            
+}
+
+
 
 .broker:nth-child(odd){
     background : #4a85c0;
@@ -69,36 +92,44 @@ body{
 
 
 .col1 {
-    width : 50%;
+    width : 100%;
+    height : 100%;
     background: red;
+    display: none;
 }
 
 .col2 {
-    width : 50%;
+    width : 100%;
+    height : 100%;
     background:gray;
 }
 
 .col3 {
-    width : 50%;   
+    width : 100%;
+    height : 100%;
     background: blue;    
 }
 
 .col4 {
-    width : 50%;     
+    width : 100%;
+    height : 100%;
     background: pink;  
 }
 
 .col5 {
-    width : 50%;     
+    width : 100%;
+    height : 100%;    
     background: yellow;      
 }
 
 .col6 {
-    width : 50%;       
+    width : 100%;
+    height : 100%;      
     background: purple;
 }
 
 .col7 {
-    width : 50%;       
+    width : 100%;
+    height : 100%;      
     background: plum;
 }
